# pwatgame

./: .clang-tidy  .clangd  .gitignore  7  <  CMakeLists.txt  Linux.sh  Linux_Build.sh  README.md
.cache/clangd/index/: Actor.hpp.42D6B4D50CEF2EF9.idx  AssetSystem.cpp.E5662BDD0B6D99CD.idx  AssetSystem.hpp.36187BA0972D82E6.idx  AudioSystem.hpp.3310514B90BEDC53.idx  CollisionDetection.cpp.B3DBDE8D1691A1E3.idx  CollisionDetection.hpp.3C0E5545C60274C7.idx  Enemy.hpp.1B4BEA56DF6FCA0A.idx  EnemyDataBase.cpp.F669519C8C851D22.idx  EnemyDatabase.hpp.338F13D19C933A02.idx  EnemyFactory.hpp.91C76B0B445F0D70.idx  EnemyManager.cpp.A28B1BDA4430DCAA.idx  EnemyManager.hpp.F7F43715ABB2AC85.idx  EnemyPool.cpp.17C8EE6B871A027A.idx  EnemyPool.hpp.ACE5D2A31FAE6B19.idx  EnemySpec.hpp.8A4761D13341E580.idx  EnemyType.hpp.F40541A46FA3C8E1.idx  Enemy_Clank.hpp.5C66D820781400BB.idx  Enemy_Duo.hpp.28B63CE7A4564C77.idx  Enemy_Fractal.hpp.053AA0B6C33C3076.idx  Enemy_Godsip.hpp.C20B2812BDD8D97F.idx  Enemy_Miku.hpp.13CDB937767DBDFE.idx  Enemy_Monitor.hpp.31884ED3BCF5C63F.idx  Enemy_Sniper.hpp.1FCE4EDE32E866A7.idx  Enemy_Swarmer.hpp.4635FFD7E790E09D.idx  Enemy_Zomb.hpp.104B948F05614B99.idx  Faction.hpp.0E622DA614EF8DA9.idx  Game.cpp.145B8D5F8106059E.idx  Game.hpp.7FB3E2B94DCFF74F.idx  (+83 more)
.github/workflows/: cmake-linux.yml  cmake-multi-platform.yml  cmake-windows.yml
scripts/: MinibossData.lua  enemyData.lua  enemyspawn.lua  itemspawn.lua  lvl1Data.lua  lvl1Items.lua  minibossData.lua  spawnlvl1.lua  weaponData.lua
scripts/common/: DefaultEnemyData.lua  DefaultWeaponData.lua  MinibossData.lua  enemy_spawn_patterns.lua  item_spawn_patterns.lua  spawn_patterns.lua  timings.lua  wall_spawn_patterns.lua
scripts/level1/: EnemyData.lua  EnemySchedule.lua  ItemSchedule.lua  MinibossSchedule.lua  WeaponData.lua
scripts/level2/: EnemyData.lua  EnemySchedule.lua  ItemSchedule.lua  MinibossSchedule.lua  WeaponData.lua
scripts/level3/: EnemyData.lua  EnemySchedule.lua  ItemSchedule.lua  MinibossSchedule.lua  WeaponData.lua
scripts/level4/: EnemyData.lua  EnemySchedule.lua  ItemSchedule.lua  MinibossSchedule.lua  WallSchedule.lua  WeaponData.lua
scripts/levels/: lvl1Enemies.lua  lvl1Items.lua  lvl1Miniboss.lua  tutorial.lua
sound/: AudioSystem.cpp  AudioSystem.hpp  GameScore.hpp  SoundEffect.hpp
src/: CollisionDetection.cpp  CollisionDetection.hpp  Entity.hpp  Game.cpp  Game.hpp  GameModes.hpp  GameState.hpp  Items.cpp  Items.hpp  ItemsManager.hpp  Player.cpp  Player.hpp  RaylibApp.hpp  SoundEffect.hpp  SoundEffects.cpp  SoundEffects.hpp  Texture.cpp  Texture.hpp  World.hpp  main.cpp
src/Paths/: Paths.cpp  Paths.hpp
src/collisions/: CollisionDetection.cpp  CollisionDetection.hpp
src/dialogue/: Dialogue_WIP.hpp
src/entities/: Actor.hpp  Enemies.cpp  Enemy.cpp  Enemy.hpp  EnemyDataBase.cpp  EnemyDatabase.hpp  EnemyFactory.hpp  EnemyManager.cpp  EnemyManager.hpp  EnemyPool.cpp  EnemyPool.hpp  EnemySpec.hpp  EnemyType.hpp  Enemy_Clank.hpp  Enemy_Constrainer.hpp  Enemy_Duo.hpp  Enemy_Fractal.hpp  Enemy_Godsip.hpp  Enemy_Gost.hpp  Enemy_Miku.hpp  Enemy_Monitor.hpp  Enemy_Sniper.hpp  Enemy_Swarmer.hpp  Enemy_ThreadEmitter.hpp  Enemy_Walled.hpp  Enemy_WalledMove.hpp  Enemy_Zomb.hpp  EntityManager.hpp  Faction.hpp  MiniBoss.cpp  MiniBoss.hpp  MiniBossDatabase.cpp  MiniBossDatabase.hpp  MiniBossFactory.hpp  MiniBossManager.cpp  MiniBossManager.hpp  MiniBossPool.cpp  MiniBossPool.hpp  MiniBossSpec.hpp  MiniBossType.hpp  (+22 more)
src/items/: FeedbackSystem.hpp  Item.hpp  ItemDatabase.hpp  ItemSpec.hpp  ItemType.hpp  Item_Drink.hpp  Item_Food.hpp  Item_Weapon.hpp  Items.cpp  Items.hpp  ItemsManager.cpp  ItemsManager.hpp  TextureRegistry.hpp
src/levels/: ItemScheduler.cpp  ItemScheduler.hpp  LevelID.hpp  LevelLoader.hpp  LevelLoader_WIP.hpp  MusicScheduler.hpp  ProjectileScheduler.hpp  ScheduleManager.hpp  Scheduler.hpp  SpawnScheduler.cpp  SpawnScheduler.hpp  displayLevel.hpp  spawn.lua
src/lua/: LuaWrapper.cpp  LuaWrapper.hpp  TypeFromString.hpp  lua.hpp
src/player/: Player.cpp  Player.hpp  PlayerManager.hpp  PlayerState.hpp
src/projectiles/: LongRange.hpp  PlayerProjectiles.cpp  PlayerProjectiles.hpp  Proj.Hellfire.hpp  Proj_Elixir.hpp  Proj_Executable.hpp  Proj_Grenade.hpp  Proj_Hellfire.hpp  Proj_Internet.hpp  Proj_Lambda.hpp  Proj_LongRange.hpp  Proj_Paren.hpp  Proj_Recon.hpp  Proj_RecursiveErr.hpp  Proj_Rocket.hpp  Proj_SlowCannon.hpp  Proj_Straight.hpp  Proj_Update.hpp  Proj_Uzi.hpp  Proj_Warning.hpp  Proj_rocket.hpp  Projectile.hpp  ProjectileFactory.cpp  ProjectileFactory.hpp  ProjectileManager.cpp  ProjectileManager.hpp  ProjectilePool.cpp  ProjectilePool.hpp  ProjectileType.hpp  Straight.hpp  StraightProjectile.hpp  TextureRegistry.hpp  WeaponDatabase.cpp  WeaponDatabase.hpp  WeaponSpec.hpp
src/sound/: AudioSystem.cpp  AudioSystem.hpp  GameScore.hpp  MusicSystem.cpp  MusicSystem.hpp  SfxSystem.cpp  SfxSystem.hpp  SoundEffect.hpp
src/texture/: AssetSystem.cpp  AssetSystem.hpp
src/ui/: ConfirmQuit.cpp  ConfirmQuit.hpp  PauseMenu.cpp  PauseMenu.hpp  UILib.cpp  UILib.hpp  UIManager.cpp  UIManager.hpp
src/utils/: Random.hpp  Scheduler.hpp  clampEntities.hpp
texture/: AssetSystem.cpp  AssetSystem.hpp
toolchains/: linux.cmake  windows.cmake
(+1 files in other folders)
